# openhost

./: .gitignore  Package.resolved  Package.swift  README.md
.github/workflows/: ci.yml  publish.yml
Sources/OpenHost/: OpenHostApp.swift  main.swift
Sources/OpenHost/Services/: ChatClient.swift  ChatExporter.swift  ChatSession.swift  DocumentExtractor.swift  HealthChecker.swift  ProcessSupervisor.swift
Sources/OpenHost/Services/Gateway/: ChatRoute.swift  GatewayServer.swift  ModelsRoute.swift  Multipart.swift  SearchRoute.swift  TranscriptionRoute.swift
Sources/OpenHost/Services/Search/: BraveProvider.swift  DuckDuckGoProvider.swift  SearXNGProvider.swift  SearchProvider.swift  SearchRouter.swift  TavilyProvider.swift
Sources/OpenHost/Services/Transcription/: AudioDevices.swift  AudioPlaybackEngine.swift  AudioRecorder.swift  AudioSampleConverter.swift  TranscriptionService.swift
Sources/OpenHost/Views/: AttachmentChipView.swift  ChatComposerView.swift  ChatSettingsView.swift  ChatStatsBar.swift  ChatView.swift  ConversationListView.swift  DetailView.swift  FlowLayout.swift  LogView.swift  MarkdownView.swift  MessageBubbleView.swift  ModelCardView.swift  RootView.swift  SettingsView.swift  SlotsView.swift  ThinkBlockView.swift
Sources/OpenHost/Views/Transcribe/: TranscribeView.swift
examples/: perfect_resume.py  perfect_resume_v2.py
python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml
python/src/openhost/: __init__.py  _backend.py  _grammar.py  _qwen_compat.py  _session_db.py  chat.py  cli.py  download.py  extract.py  hardware.py  hf_auto.py  panel.py  paths.py  presets.py  profiles.py  registry.py  runner.py  session.py  voice.py
python/src/openhost/memory/: __init__.py  _db.py  extractor.py  graph.py  recall.py
python/src/openhost/search/: __init__.py  base.py  brave.py  duckduckgo.py  searxng.py  tavily.py  tool.py
python/src/openhost/transcription/: __init__.py  auto.py  base.py  faster.py  loader.py  mlx.py
scripts/: Info.plist  make-app.sh
